@@ -1,3 +1,5 @@
+2002-11-07 13:15, v1.1.4:
+ - Workaround for missing InvalidOid definition
 2002-10-23 16:00, v1.1.3:
  - Cursor & TableStream hierarchy now work on any transaction type
  - get no. of affected rows & oid of inserted row from Result
